@startuml Pizzaria
title Sistema de controle de pedidos de uma pizzaria delivery

class Cliente {
    - idCliente: Int
    - nome: String
    - telefone: String
    - bairro: String
}

class Atendente {
    - idAtendente: Int
    - nome: String
    + cadastrarCliente()
    + cadastrarPedido()
}

class Pedido {
    - idPedido: Int
    - data: Date
    - hora: Time
    - status : String
}

class ItemPedido {
    - idItemPedido: Int
    - quantidade: Int
    - desc : String
    - nome : String
    - preco : Double
}

Cliente "1:1" -- "0..*" Pedido: "realiza"
Pedido "0..*" -- "1:1" Atendente: "cadastra"
Pedido "1:1" -- "1..*" ItemPedido: "contém"

@enduml